fix typing not display on mobile devices

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -215,3 +215,7 @@ input[type='number'] {
         font-weight: 600;
     }
 }
+
+.Typewriter {
+    display: inline !important;
+}
